--- a/.github/workflows/Dbdeploy.yml
+++ b/.github/workflows/Dbdeploy.yml
@@ -20,7 +20,21 @@
         connection-string: '${{ secrets.AZURE_SQL_CONNECTION_STRING }}'
         sql-file: './test_sql_script.sql'
         
+        
+     - name: array
+       id: arr
+       run: |
+          arr=()
+          for i in "$(./*.sql)"
+          do
+           
+              arr+=($i)
+          
+          done
+          echo ::set-output name=arr::${arr[@]}
+        
      # Azure logout 
      - name: logout
        run: |
             az logout
+            
