--- a/.github/workflows/Dbdeploy.yml
+++ b/.github/workflows/Dbdeploy.yml
@@ -40,7 +40,11 @@
           ]
           ];
 
-  
+           foreach ($matrix['packages'] as $package) {
+            $packageDirectory = 'packages/' . $package;
+            $splitRepositoryName = $package;
+               // ... do the magic
+       }
         
      # Azure logout 
      - name: logout
